--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,4 +12,12 @@ server.port=8090
 
 # jwt parameters
 jwt.secret=j3H5Ld5nYmGWyULy6xwpOgfSH++NgKXnJMq20vpfd+8=t
-jwt.expiresIn=86400000
+jwt.expiresIn=8640000000
+
+# swagger-ui custom path
+openapi.service.url= http://localhost:8090
+openapi.service.title = Visiting Platform Management
+openapi.service.version= 1.0.0
+springdoc.swagger-ui.path= /swagger-ui.html
+springdoc.api-docs.path= /v3/api-docs
+springdoc.swagger-ui.operationsSorter= method
